solved project can not add

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1182,11 +1182,11 @@
                             // Reset the form if needed
                             $("#validation-form")[0].reset();
                             console.log("this projce has benn saved", data);
-                            event.currentTarget.submit();
+                            // event.currentTarget.submit();
                         },
                         error: function (data) {
                             alert("Error registering project");
-                            event.currentTarget.submit();
+                            // event.currentTarget.submit();
                         },
                     });
                 });
