--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1240,6 +1240,10 @@
                 maxWidth: "100%",
             });
 
+            console.log("SYSSELECT" , sysSelect);
+
+
+
             $(".circle-progress").each(function () {
                 const minValue = $(this).attr("data-min-value");
                 const maxValue = $(this).attr("data-max-value");
