--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -439,7 +439,6 @@
             // Check the "Client" checkbox initially
             $('#responsible_type').prop('checked', true);
 
-            // Populate the select box with the client's name
             populateClientName();
         });
 
@@ -522,6 +521,7 @@
                 issue_category: issue_category,
                 responsible_type: responsible_type,
                 project_id: dataForIssue.projectId,
+                status: "PENDING",
             };
 
             console.log('Request Data:', requestData);
@@ -573,7 +573,7 @@
                 method: 'GET',
                 dataType: 'json',
                 success: function (data) {
-                    console.log("Data"+data);
+                    console.log("Data" + data);
                     const sortContainer = $('#sort');
 
                     // Loop through the retrieved data and create content for each item
@@ -620,11 +620,12 @@
                         sortContainer.append(issueDiv);
                     });
 
-                    $('.see-more-button').click(function() {
-                        var issueId = $(this).data('id');
-                        console.log('Clicked button with data-id:', issueId);
+                    $('.see-more-button').click(function () {
+                        const issueId = $(this).data('id');
+                        console.log('Clicked button with data-iD:', issueId);
+
                         $.ajax({
-                            url: 'api/issue/lists/byId/' + issueId,
+                            url: 'api/issue/list/byId/' + issueId,
                             type: 'GET',
                             dataType: 'json',
                             success: function(data) {
@@ -636,7 +637,7 @@
                                     $('#root_causeValue').text(data.root_cause);
                                     $('#impactValue').text(data.impact);
                                     $('#placeValue').text(data.place);
-                                    $('#issue-edit-btn').data('issueId', data.id);
+                                    $('#issue-edit-btn').data('issueId');
                                     $('#issueDetailModal').modal('show');
                                 } else {
                                     console.log('No data received for issue ID:', issueId);
@@ -675,7 +676,6 @@
                 input.classList.add('form-control');
                 input.classList.add('editable');
 
-                // Set a unique ID for each new input element based on the index
                 input.id = `newInput_${index}`;
 
                 field.innerHTML = '';
@@ -693,11 +693,7 @@
             const root_cause = document.getElementById('newInput_3').value;
             const impact = document.getElementById('newInput_4').value;
             const place = document.getElementById('newInput_5').value;
-            // const issue_category = document.getElementById('issue_category').value;
-            // const user_pic = document.getElementById('user_pic').value;
-            // const responsible_party = document.getElementById('responsible_party').value;
-            // const description = document.getElementById('description').value;
-            // const title = document.getElementById('title').value;
+
 
 
 
@@ -710,12 +706,7 @@
                 root_cause: root_cause,
                 impact: impact,
                 place: place,
-                // issue_category: issue_category,
-                // user_pic: user_pic,
-                // responsible_party: responsible_party,
-                // description: description,
-                // title: title,
-
+                updated_date: new Date().getTime(),
 
             };
 
